<?xml version="1.0"?>
<package format="3">
  <name>map_organizer_msgs</name>
  <version>0.14.0</version>
  <description>Message definitions for map_organizer_msgs package</description>

  <maintainer email="tomohiro.oku@gmail.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>
  <author email="tomohiro.oku@gmail.com">Tomohiro Oku</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_denerators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>nav_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
